<merge xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                style="@style/ImageVStyle"
                android:src="@drawable/horse_fly" />

            <ImageView
                style="@style/ImageVStyle"
                android:src="@drawable/pronghorn" />

            <ImageView
                style="@style/ImageVStyle"
                android:src="@drawable/golden_eagle" />

            <ImageView
                style="@style/ImageVStyle"
                android:src="@drawable/black_marlin" />

            <ImageView
                style="@style/ImageVStyle"
                android:src="@drawable/no_animal" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/answer_6_1"
                style="@style/RudioButtonStyle"
                android:onClick="onCheckBoxClicked6" />

            <CheckBox
                android:id="@+id/answer_6_2"
                style="@style/RudioButtonStyle"
                android:onClick="onCheckBoxClicked6" />

            <CheckBox
                android:id="@+id/answer_6_3"
                style="@style/RudioButtonStyle"
                android:onClick="onCheckBoxClicked6" />

            <CheckBox
                android:id="@+id/answer_6_4"
                style="@style/RudioButtonStyle"
                android:onClick="onCheckBoxClicked6" />

            <CheckBox
                android:id="@+id/answer_6_5"
                style="@style/RudioButtonStyle"
                android:onClick="onCheckBoxClicked6" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.example.android.fastestanimalsquiz.CustomFontTextView
                style="@style/RudioButtonText"
                android:text="@string/answer_6_1" />

            <com.example.android.fastestanimalsquiz.CustomFontTextView
                style="@style/RudioButtonText"
                android:text="@string/answer_6_2" />

            <com.example.android.fastestanimalsquiz.CustomFontTextView
                style="@style/RudioButtonText"
                android:text="@string/answer_6_3" />

            <com.example.android.fastestanimalsquiz.CustomFontTextView
                style="@style/RudioButtonText"
                android:text="@string/answer_6_4" />

            <com.example.android.fastestanimalsquiz.CustomFontTextView
                style="@style/RudioButtonText"
                android:text="@string/answer_6_5" />
        </LinearLayout>
    </LinearLayout>
</merge>