<merge xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                style="@style/ImageVStyle"
                android:src="@drawable/elephant" />

            <ImageView
                style="@style/ImageVStyle"
                android:src="@drawable/brown_bear" />

            <ImageView
                style="@style/ImageVStyle"
                android:src="@drawable/hare" />

            <ImageView
                style="@style/ImageVStyle"
                android:src="@drawable/turtle" />

            <ImageView
                style="@style/ImageVStyle"
                android:src="@drawable/no_animal" />
        </LinearLayout>

        <RadioGroup
            android:id="@+id/answer_7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/answer_7_1"
                style="@style/RudioButtonStyle"
                android:onClick="onRadioButtonClicked7" />

            <RadioButton
                android:id="@+id/answer_7_2"
                style="@style/RudioButtonStyle"
                android:onClick="onRadioButtonClicked7" />

            <RadioButton
                android:id="@+id/answer_7_3"
                style="@style/RudioButtonStyle"
                android:onClick="onRadioButtonClicked7" />

            <RadioButton
                android:id="@+id/answer_7_4"
                style="@style/RudioButtonStyle"
                android:onClick="onRadioButtonClicked7" />

            <RadioButton
                android:id="@+id/answer_7_5"
                style="@style/RudioButtonStyle"
                android:onClick="onRadioButtonClicked7" />
        </RadioGroup>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.example.android.fastestanimalsquiz.CustomFontTextView
                style="@style/RudioButtonText"
                android:text="@string/answer_7_1" />

            <com.example.android.fastestanimalsquiz.CustomFontTextView
                style="@style/RudioButtonText"
                android:text="@string/answer_7_2" />

            <com.example.android.fastestanimalsquiz.CustomFontTextView
                style="@style/RudioButtonText"
                android:text="@string/answer_7_3" />

            <com.example.android.fastestanimalsquiz.CustomFontTextView
                style="@style/RudioButtonText"
                android:text="@string/answer_7_4" />

            <com.example.android.fastestanimalsquiz.CustomFontTextView
                style="@style/RudioButtonText"
                android:text="@string/answer_7_5" />
        </LinearLayout>
    </LinearLayout>
</merge>