<merge xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                style="@style/ImageVStyle"
                android:src="@drawable/horse_fly" />

            <ImageView
                style="@style/ImageVStyle"
                android:src="@drawable/black_cutworm" />

            <ImageView
                style="@style/ImageVStyle"
                android:src="@drawable/green_dragonfly" />

            <ImageView
                style="@style/ImageVStyle"
                android:src="@drawable/dear_botfly" />

            <ImageView
                style="@style/ImageVStyle"
                android:src="@drawable/wasp" />
        </LinearLayout>

        <RadioGroup
            android:id="@+id/answer_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/answer_5_1"
                style="@style/RudioButtonStyle"
                android:onClick="onRadioButtonClicked5" />

            <RadioButton
                android:id="@+id/answer_5_2"
                style="@style/RudioButtonStyle"
                android:onClick="onRadioButtonClicked5" />

            <RadioButton
                android:id="@+id/answer_5_3"
                style="@style/RudioButtonStyle"
                android:onClick="onRadioButtonClicked5" />

            <RadioButton
                android:id="@+id/answer_5_4"
                style="@style/RudioButtonStyle"
                android:onClick="onRadioButtonClicked5" />

            <RadioButton
                android:id="@+id/answer_5_5"
                style="@style/RudioButtonStyle"
                android:onClick="onRadioButtonClicked5" />
        </RadioGroup>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.example.android.fastestanimalsquiz.CustomFontTextView
                style="@style/RudioButtonText"
                android:text="@string/answer_5_1" />

            <com.example.android.fastestanimalsquiz.CustomFontTextView
                style="@style/RudioButtonText"
                android:text="@string/answer_5_2" />

            <com.example.android.fastestanimalsquiz.CustomFontTextView
                style="@style/RudioButtonText"
                android:text="@string/answer_5_3" />

            <com.example.android.fastestanimalsquiz.CustomFontTextView
                style="@style/RudioButtonText"
                android:text="@string/answer_5_4" />

            <com.example.android.fastestanimalsquiz.CustomFontTextView
                style="@style/RudioButtonText"
                android:text="@string/answer_5_5" />
        </LinearLayout>
    </LinearLayout>
</merge>