<merge xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                style="@style/ImageVStyle"
                android:src="@drawable/cheetah" />

            <ImageView
                style="@style/ImageVStyle"
                android:src="@drawable/adelie_penguin" />

            <ImageView
                style="@style/ImageVStyle"
                android:src="@drawable/zebra" />

            <ImageView
                style="@style/ImageVStyle"
                android:src="@drawable/elephant" />

        </LinearLayout>

        <RadioGroup
            android:id="@+id/answer_8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/answer_8_1"
                style="@style/RudioButtonStyle"
                android:onClick="onRadioButtonClicked8" />

            <RadioButton
                android:id="@+id/answer_8_2"
                style="@style/RudioButtonStyle"
                android:onClick="onRadioButtonClicked8" />

            <RadioButton
                android:id="@+id/answer_8_3"
                style="@style/RudioButtonStyle"
                android:onClick="onRadioButtonClicked8" />

            <RadioButton
                android:id="@+id/answer_8_4"
                style="@style/RudioButtonStyle"
                android:onClick="onRadioButtonClicked8" />

        </RadioGroup>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.example.android.fastestanimalsquiz.CustomFontTextView
                style="@style/RudioButtonText"
                android:text="@string/answer_8_1" />

            <com.example.android.fastestanimalsquiz.CustomFontTextView
                style="@style/RudioButtonText"
                android:text="@string/answer_8_2" />

            <com.example.android.fastestanimalsquiz.CustomFontTextView
                style="@style/RudioButtonText"
                android:text="@string/answer_8_3" />

            <com.example.android.fastestanimalsquiz.CustomFontTextView
                style="@style/RudioButtonText"
                android:text="@string/answer_8_4" />

        </LinearLayout>
    </LinearLayout>
</merge>