<merge xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                style="@style/ImageVStyle"
                android:src="@drawable/cheetah" />

            <ImageView
                style="@style/ImageVStyle"
                android:src="@drawable/pronghorn" />

            <ImageView
                style="@style/ImageVStyle"
                android:src="@drawable/mexican_free_tailed_bat" />

            <ImageView
                style="@style/ImageVStyle"
                android:src="@drawable/zebra" />
        </LinearLayout>

        <RadioGroup
            android:id="@+id/answer_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/answer_3_1"
                style="@style/RudioButtonStyle"
                android:onClick="onRadioButtonClicked3" />

            <RadioButton
                android:id="@+id/answer_3_2"
                style="@style/RudioButtonStyle"
                android:onClick="onRadioButtonClicked3" />

            <RadioButton
                android:id="@+id/answer_3_3"
                style="@style/RudioButtonStyle"
                android:onClick="onRadioButtonClicked3" />

            <RadioButton
                android:id="@+id/answer_3_4"
                style="@style/RudioButtonStyle"
                android:onClick="onRadioButtonClicked3" />
        </RadioGroup>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.example.android.fastestanimalsquiz.CustomFontTextView
                style="@style/RudioButtonText"
                android:text="@string/answer_3_1" />

            <com.example.android.fastestanimalsquiz.CustomFontTextView
                style="@style/RudioButtonText"
                android:text="@string/answer_3_2" />

            <com.example.android.fastestanimalsquiz.CustomFontTextView
                style="@style/RudioButtonText"
                android:text="@string/answer_3_3" />

            <com.example.android.fastestanimalsquiz.CustomFontTextView
                style="@style/RudioButtonText"
                android:text="@string/answer_3_4" />
        </LinearLayout>
    </LinearLayout>
</merge>