<merge xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                style="@style/ImageVStyle"
                android:src="@drawable/blue_shark" />

            <ImageView
                style="@style/ImageVStyle"
                android:src="@drawable/sail_fish" />

            <ImageView
                style="@style/ImageVStyle"
                android:src="@drawable/striped_marlin" />

            <ImageView
                style="@style/ImageVStyle"
                android:src="@drawable/black_marlin" />
        </LinearLayout>

        <RadioGroup
            android:id="@+id/answer_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/answer_4_1"
                style="@style/RudioButtonStyle"
                android:onClick="onRadioButtonClicked4" />

            <RadioButton
                android:id="@+id/answer_4_2"
                style="@style/RudioButtonStyle"
                android:onClick="onRadioButtonClicked4" />

            <RadioButton
                android:id="@+id/answer_4_3"
                style="@style/RudioButtonStyle"
                android:onClick="onRadioButtonClicked4" />

            <RadioButton
                android:id="@+id/answer_4_4"
                style="@style/RudioButtonStyle"
                android:onClick="onRadioButtonClicked4" />
        </RadioGroup>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.example.android.fastestanimalsquiz.CustomFontTextView
                style="@style/RudioButtonText"
                android:text="@string/answer_4_1" />

            <com.example.android.fastestanimalsquiz.CustomFontTextView
                style="@style/RudioButtonText"
                android:text="@string/answer_4_2" />

            <com.example.android.fastestanimalsquiz.CustomFontTextView
                style="@style/RudioButtonText"
                android:text="@string/answer_4_3" />

            <com.example.android.fastestanimalsquiz.CustomFontTextView
                style="@style/RudioButtonText"
                android:text="@string/answer_4_4" />
        </LinearLayout>
    </LinearLayout>
</merge>