<merge xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                style="@style/ImageVStyle"
                android:src="@drawable/golden_eagle" />

            <ImageView
                style="@style/ImageVStyle"
                android:src="@drawable/eurasian_hobby" />

            <ImageView
                style="@style/ImageVStyle"
                android:src="@drawable/peregrine_falcon" />

            <ImageView
                style="@style/ImageVStyle"
                android:src="@drawable/adelie_penguin" />
        </LinearLayout>

        <RadioGroup
            android:id="@+id/answer_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/answer_2_1"
                style="@style/RudioButtonStyle"
                android:onClick="onRadioButtonClicked2" />

            <RadioButton
                android:id="@+id/answer_2_2"
                style="@style/RudioButtonStyle"
                android:onClick="onRadioButtonClicked2" />

            <RadioButton
                android:id="@+id/answer_2_3"
                style="@style/RudioButtonStyle"
                android:onClick="onRadioButtonClicked2" />

            <RadioButton
                android:id="@+id/answer_2_4"
                style="@style/RudioButtonStyle"
                android:onClick="onRadioButtonClicked2" />
        </RadioGroup>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.example.android.fastestanimalsquiz.CustomFontTextView
                style="@style/RudioButtonText"
                android:text="@string/answer_2_1" />

            <com.example.android.fastestanimalsquiz.CustomFontTextView
                style="@style/RudioButtonText"
                android:text="@string/answer_2_2" />

            <com.example.android.fastestanimalsquiz.CustomFontTextView
                style="@style/RudioButtonText"
                android:text="@string/answer_2_3" />

            <com.example.android.fastestanimalsquiz.CustomFontTextView
                style="@style/RudioButtonText"
                android:text="@string/answer_2_4" />
        </LinearLayout>
    </LinearLayout>
</merge>